--- a/src/content/page/index.mdx
+++ b/src/content/page/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Aleto Auto Skla Servis - Autoskla, Pneuservis, Servis Vozidel
+title: ALETO autosklo servis
 description: "Profesionální výměna autoskel i mobilně u vás doma! Pneuservis, diagnostika, servis vozidel. Ochoz u Konice. Tel: 731 409 899 / 608 102 471"
 intro: "Autoskla i mobilně - přijedeme k vám domů!"
 hero_template: image
@@ -208,6 +208,6 @@ thumbnail: /src/assets/aleto/Messenger_creation_A61ECAE0-E4E3-48C5-97BA-E8242E37
 
 Pneumatiky a pravidelný servis pneumatik jsou klíčem k bezpečnosti. Mechanická stránka vozu je velmi důležitou součástí vaší i cizí bezpečnosti. Svěřte svůj vůz do rukou profesionálů.
 
-**Aleto Auto Skla Servis** - váš partner pro kompletní péči o automobil v Ochozi u Konice a okolí.
+**ALETO autosklo servis** - váš partner pro kompletní péči o automobil v Ochozi u Konice a okolí.
 
 </div>
