--- a/src/content/page/kontakt.mdx
+++ b/src/content/page/kontakt.mdx
@@ -1,5 +1,5 @@
 ---
-title: Kontakt - Aleto Auto Skla Servis
+title: Kontakt - ALETO autosklo servis
 description: "Kontaktujte nás: 731 409 899 / 608 102 471, aletosutosklo@seznam.cz. Ochoz u Konice. Mobilní servis autoskel zdarma!"
 intro: "Jsme tu pro vás"
 hero_template: image
@@ -78,7 +78,7 @@ blocks:
       Sledujte nás na sociálních sítích pro novinky a akce:
 
 
-      - **Facebook:** [Aleto Auto Skla Servis](https://www.facebook.com/share/1FDXn4LaW8/)
+      - **Facebook:** [ALETO autosklo servis](https://www.facebook.com/share/1FDXn4LaW8/)
 
       - **Instagram:** [@aletoservis](https://www.instagram.com/aletoservis?igsh=MWl1ZDRlcTZxbjBleg==)
 
