--- a/src/content/page/sluzby.mdx
+++ b/src/content/page/sluzby.mdx
@@ -1,5 +1,5 @@
 ---
-title: Naše služby - Aleto Auto Skla Servis
+title: Naše služby - ALETO autosklo servis
 description: "Kompletní přehled služeb: Autoskla, Pneuservis, Servis vozidel, Diagnostika, Leštění světel, Příprava na STK. Ochoz u Konice."
 intro: "Komplexní autoservis pro všechny vaše potřeby"
 hero_template: image
